fix error handling, minor fixes in styles, create button visibility control on a form in UserProfile

--- a/src/pages/error/error.module.css
+++ b/src/pages/error/error.module.css
@@ -17,6 +17,6 @@
 
 .text {
   margin: 0 0 8rem;
-  font: 400 16px/19.4px 'JetBrainsMono', 'Inter', sans-serif;
+  font: 400 1rem/1 'JetBrainsMono', 'Inter', sans-serif;
   color: #f2f2f3;
 }
