--- a/src/pages/user-profile/user-profile.module.css
+++ b/src/pages/user-profile/user-profile.module.css
@@ -13,6 +13,7 @@
   flex-direction: column;
   row-gap: 1.5rem;
   inline-size: min-content;
+  min-block-size: 320px;
 }
 
 .buttonContainer {
